<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.gianglong.longscalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/screenBG">
        
        <TextView
            android:id="@+id/tvCalculation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:gravity="center|right"
            android:layout_marginRight="8dp"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="0"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginRight="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            />
        
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/background"
        android:orientation="horizontal"
        android:paddingTop="1dp">
        <!-- 1 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/clear"
                style="@style/Special"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/clear" />

            <TextView
                android:id="@+id/num_7"
                style="@style/Numbers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num_7" />

            <TextView
                android:id="@+id/num_4"
                style="@style/Numbers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num_4" />

            <TextView
                android:id="@+id/num_1"
                style="@style/Numbers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num_1" />

            <TextView
                android:id="@+id/num_0"
                style="@style/Numbers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num_0" />


        </LinearLayout>

        <!-- 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/minus"
                style="@style/Special"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/num_8"
                style="@style/Numbers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num_8" />

            <TextView
                android:id="@+id/num_5"
                style="@style/Numbers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num_5" />

            <TextView
                android:id="@+id/num_2"
                style="@style/Numbers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num_2" />

            <TextView
                android:id="@+id/point"
                style="@style/Numbers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/point" />


        </LinearLayout>

        <!-- 3 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/remaining"
                style="@style/Special"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/remaining" />

            <TextView
                android:id="@+id/num_9"
                style="@style/Numbers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num_9" />

            <TextView
                android:id="@+id/num_6"
                style="@style/Numbers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num_6" />

            <TextView
                android:id="@+id/num_3"
                style="@style/Numbers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/num_3" />

            <TextView
                android:id="@+id/result"
                style="@style/Result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/result" />


        </LinearLayout>

        <!-- 4 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/backspace"
                style="@style/Special"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/backspace" />

            <TextView
                android:id="@+id/division"
                style="@style/Special"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/division" />

            <TextView
                android:id="@+id/multiplication"
                style="@style/Special"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/multiplication" />

            <TextView
                android:id="@+id/subtraction"
                style="@style/Special"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/subtraction" />

            <TextView
                android:id="@+id/addition"
                style="@style/Special"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/addition" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>
